--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "antd": "^4.1.2",
+    "@ant-design/icons": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
