--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "3.4.0",
     "react-router-dom": "^5.1.2",
     "antd": "^4.1.2",
-    "@ant-design/icons": "^4.1.0"
+    "@ant-design/icons": "^4.1.0",
+    "bootstrap": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
