--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.1.2",
+    "bootstrap": "^4.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
     "react-router-dom": "^5.1.2",
-    "antd": "^4.1.2",
-    "@ant-design/icons": "^4.1.0",
-    "bootstrap": "^4.2.1",
-    "reactstrap": "^6.4.0"
+    "react-scripts": "3.4.0",
+    "reactstrap": "^6.4.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
